@@ -3,6 +3,8 @@ Version 0.65
 * virtnbdmap: open target device with O_DIRECT during replay of incremental
 data to speedup the process: no need to sync then.
 * virtnbdmap: remove nbdkit logfile after exiting successfully
+* virtnbdmap: use pidfile and send signal to correct process. (#46)
+* virtnbdmap: check if the passed device starts with /dev/nbd
 
 Version 0.64
 ---------
